--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     background-size:cover;
-    background-image: url(assets/images/メインビジュアル背景.png);
+    background-image: url(assets/images/mainbackground.png);
     position: relative;
     overflow: hidden;
 }
@@ -528,7 +528,7 @@ a:hover {
     width: 100%;
     height: 300px;
     background-size:cover;
-    background-image: url(assets/images/背景_1.png);
+    background-image: url(assets/images/background_1.png);
     background-color:rgba(255,255,255,0.2);
     display: flex;
     justify-content: center;
@@ -674,7 +674,7 @@ a:hover {
     height:300px;
     background-color: white;
     position: relative;
-    background-image: url(assets/images/背景_1.png);
+    background-image: url(assets/images/background_1.png);
     background-size: cover;
     border-radius: 10px;
     /* box-shadow:0px 0px 20px 20px rgba(0,0,0,0.02) inset; */
@@ -706,7 +706,7 @@ a:hover {
 
 /* コンタクト */
 .コンタクトセクション{
-    background-image:url(assets/images/背景_ドット.png);
+    background-image:url(assets/images/background_dot.png);
     background-size:500px;
     background-repeat:no-repeat;
     position: relative;
@@ -715,7 +715,7 @@ a:hover {
 }
 
 .コンタクトセクション2{
-  background-image:url(assets/images/背景_ドット.png);
+  background-image:url(assets/images//background_dot.png);
   background-size:500px;
   background-repeat:no-repeat;
   position: relative;
@@ -728,7 +728,7 @@ a:hover {
 }
 
 .コンタクトセクション3{
-  background-image:url(assets/images/背景_ドット.png);
+  background-image:url(assets/images//background_dot.png);
   background-size:500px;
   background-repeat:no-repeat;
   position: relative;
@@ -741,7 +741,7 @@ a:hover {
 }
 
 .コンタクトセクション4{
-  background-image:url(assets/images/背景_4.png);
+  background-image:url(assets/images/background_4.png);
   background-size:700px;
   background-repeat:no-repeat;
   position: relative;
@@ -761,148 +761,6 @@ a:hover {
   margin:auto;
 }
 
-/* .Form {
-    margin-top: 80px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 720px;
-  }
-  @media screen and (max-width: 480px) {
-    .Form {
-      margin-top: 40px;
-    }
-  }
-  .Form-Item {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Item {
-      padding-left: 14px;
-      padding-right: 14px;
-      padding-top: 16px;
-      padding-bottom: 16px;
-      flex-wrap: wrap;
-    }
-  }
-  .Form-Item:nth-child(5) {
-  
-  }
-  .Form-Item-Label {
-    margin:0;
-    width: 100%;
-    max-width: 248px;
-    letter-spacing: 0.05em;
-    font-size: 18px;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Item-Label {
-      max-width: inherit;
-      display: flex;
-      align-items: center;
-      font-size: 15px;
-    }
-  }
-  .Form-Item-Label.isMsg {
-    margin-top: 8px;
-    margin-bottom: auto;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Item-Label.isMsg {
-      margin-top: 0;
-    }
-  }
-  .Form-Item-Label-Required {
-    border-radius: 17px;
-    margin-right: 10px;
-    width: 60px;
-    display: inline-block;
-    text-align: center;
-    background: #dd755e;
-    color: #fff;
-    font-size: 0.6em;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Item-Label-Required {
-      border-radius: 4px;
-      padding-top: 4px;
-      padding-bottom: 4px;
-      width: 32px;
-      font-size: 10px;
-    }
-  }
-  .Form-Item-Input {
-    border: 1px solid rgb(238, 238, 238);
-    border-radius: 6px;
-    margin-left: 40px;
-    padding-left: 1em;
-    padding-right: 1em;
-    height: 48px;
-    flex: 1;
-    width: 100%;
-    max-width: 410px;
-    background: white;
-    font-size: 18px;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Item-Input {
-      margin-left: 0;
-      margin-top: 18px;
-      height: 40px;
-      flex: inherit;
-      font-size: 15px;
-    }
-  }
-  .Form-Item-Textarea {
-    border: 1px solid rgb(238, 238, 238);
-    border-radius: 6px;
-    margin-left: 40px;
-    padding-left: 1em;
-    padding-right: 1em;
-    height: 216px;
-    flex: 1;
-    width: 100%;
-    max-width: 410px;
-    background: white;
-    font-size: 18px;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Item-Textarea {
-      margin-top: 18px;
-      margin-left: 0;
-      height: 200px;
-      flex: inherit;
-      font-size: 15px;
-    }
-  }
-  .Form-Btn {
-    border:0px;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 280px;
-    display: block;
-    letter-spacing: 0.05em;
-    background:#dd755e;
-    color: white;
-    font-weight: bold;
-    font-size: 1em;
-    border-radius:10px;
-  }
-  @media screen and (max-width: 480px) {
-    .Form-Btn {
-      margin-top: 24px;
-      padding-top: 8px;
-      padding-bottom: 8px;
-      width: 160px;
-      font-size: 16px;
-    }
-  } */
 
 
 /* コンタクトカード */
