--- a/style.css
+++ b/style.css
@@ -709,6 +709,7 @@ a:hover {
     position: relative;
     top:0;
     left:0;
+    overflow: hidden;
 }
 
 .コンタクトセクション2{
@@ -722,6 +723,7 @@ a:hover {
   height:500px;
   margin-top:-500px;
   z-index:-1;
+  overflow: hidden;
 }
 
 .コンタクトセクション3{
@@ -735,6 +737,7 @@ a:hover {
   height:500px;
   margin-top:-500px;
   z-index:-1;
+  overflow: hidden;
 }
 
 .コンタクトセクション4{
@@ -748,6 +751,7 @@ a:hover {
   height:700px;
   margin-top:-700px;
   z-index:-1;
+  overflow: hidden;
 }
 
 
