--- a/style.css
+++ b/style.css
@@ -710,6 +710,7 @@ a:hover {
     top:0;
     left:0;
     overflow: hidden;
+    object-fit: cover;
 }
 
 .コンタクトセクション2{
@@ -724,6 +725,7 @@ a:hover {
   margin-top:-500px;
   z-index:-1;
   overflow: hidden;
+  object-fit: cover;
 }
 
 .コンタクトセクション3{
@@ -738,6 +740,7 @@ a:hover {
   margin-top:-500px;
   z-index:-1;
   overflow: hidden;
+  object-fit: cover;
 }
 
 .コンタクトセクション4{
@@ -752,6 +755,7 @@ a:hover {
   margin-top:-700px;
   z-index:-1;
   overflow: hidden;
+  object-fit: cover;
 }
 
 
