--- a/style.css
+++ b/style.css
@@ -718,7 +718,7 @@ a:hover {
   background-size:500px;
   background-repeat:no-repeat;
   position: relative;
-  top:-700px;
+  top:0;
   left:0;
   z-index:-1;
   overflow: hidden;
@@ -730,7 +730,7 @@ a:hover {
   background-size:500px;
   background-repeat:no-repeat;
   position: relative;
-  top:-500px;
+  top:0;
   left:0;
   z-index:-1;
   overflow: hidden;
@@ -742,8 +742,8 @@ a:hover {
   background-size:700px;
   background-repeat:no-repeat;
   position: relative;
-  top:-300px;
-  left:500px;
+  top:0;
+  right:0;
   z-index:-1;
   overflow: hidden;
   object-fit: cover;
@@ -1091,7 +1091,7 @@ right:85px;
 }
 .動画{
   margin-top:80px;
-  width:90%;
+  width:95%;
   height:auto;
 }
 .ハンバーガーメニューp{
