--- a/style.css
+++ b/style.css
@@ -426,13 +426,13 @@ a:hover {
 }
 .about1{
   width:230px;
-    top:130px;
+    top:80px;
     left:220px;
     position: absolute;
 }
 .about2{
   width:230px;
-    top:130px;
+    top:80px;
     right:220px;
     z-index:1;
     position: absolute;
@@ -640,7 +640,6 @@ a:hover {
     align-items: center;
     width:80%;
     margin: auto;
-    padding-top: 80px;
 }
 
 .私 img{
@@ -802,7 +801,7 @@ a:hover {
     width:100%;
   }
   .フッター{
-  margin-top:100px;
+  margin-top:0px;
   }
 }
 
@@ -826,8 +825,7 @@ a:hover {
   }
   
 .about画像{
-  width:65%;
-  margin-top:50px;
+  width:80%;
 }
 
 .レスポンシブ野菜大{
@@ -863,7 +861,7 @@ a:hover {
   width:220px;
 }
 .about1{
-  top:150px;
+  top:100px;
   left:-20px;
   position: absolute;
 }
@@ -910,12 +908,14 @@ a:hover {
   flex-direction: column;
   align-items: center;
   width:100%;
+  padding-top:0px;
 }
 .aboutme{
   display: flex;
   flex-direction: column;
   align-items: center;
   width:100%;
+  padding-top: 150px;
 }
 .私{
   margin-bottom:50px;
@@ -967,7 +967,7 @@ a:hover {
 }
 .お問い合わせカード{
   width:80%;
-  margin-top:0px;
+  margin-top:150px;
 }
 .about説明{
   margin-top:0px;
@@ -1031,12 +1031,12 @@ a:hover {
   height:450px;
 }
 .about1{
-  top:120px;
+  top:70px;
   left:0px;
   position: absolute;
 }
 .about2{
-  top:200px;
+  top:180px;
   right:0px;
   z-index:1;
   position: absolute;
@@ -1140,6 +1140,12 @@ right:85px;
   }
   .about説明{
     margin-top:50px;
+  }
+  .aboutme{
+    padding-top: 150px;
+  }
+  .howto{
+    padding-top:20px;
   }
 }
 
