--- a/style.css
+++ b/style.css
@@ -971,6 +971,21 @@ a:hover {
 .about説明{
   margin-top:0px;
 }
+.コンタクトセクション{
+  background-size:300px;
+}
+
+.コンタクトセクション2{
+  background-size:300px;
+}
+
+.コンタクトセクション3{
+  background-size:300px;
+}
+
+.コンタクトセクション4{
+background-size:300px;
+}
 }
 
 /* スマホ対応 */
